--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ dash-core-components==0.22.0
 dash-html-components==0.10.0
 dash-renderer==0.12.1
 decorator==4.2.1
-Flask==0.12.2
+flask>=0.12.3
 Flask-Compress==1.4.0
 gunicorn==19.7.1
 heroku==0.1.4
@@ -23,7 +23,7 @@ nbformat==4.4.0
 plotly==2.5.1
 python-dateutil==1.5
 pytz==2018.3
-requests==2.18.4
+requests>=2.20.0
 six==1.11.0
 traitlets==4.3.2
 urllib3==1.22
